added library and category servlets,dao's and jsp's

--- a/EmployeeWebApplication/WebContent/index.html
+++ b/EmployeeWebApplication/WebContent/index.html
@@ -5,18 +5,13 @@
 <title>Employee Web Application</title>  
 </head>  
 <body>  
-<h1>Welcome</h1>  
-<!-- <ul>  
+<h1>Welcome to Library Management System</h1>  
+<ul>  
   <li><a href="#">Home</a></li>  
-  <li><a href="#">News</a></li>  
-  <li><a href="#">Contact</a></li>  
+  <li><a href="login.html">Login</a></li>  
+  <li><a href="employee.html">Employee</a></li>  
   <li><a href="#">About</a></li>  
-</ul>  --> 
-<h1 style="color:blue">Find Student details</h1>
-<form action="employee-details" method="post">
-   Employee No: <input type="text" name="employeeId"/><br>
-   <input type="submit" value="Get Employee Details">
-   <input type="reset" value="Cancel">
-</form>
+</ul>
+
 </body>  
 </html>  
