fixed bugs like displaying double data on library items, category name or library name already exists on the same create pages, seperate css stlesheet for all html's and jsp's

--- a/EmployeeWebApplication/WebContent/login.html
+++ b/EmployeeWebApplication/WebContent/login.html
@@ -1,39 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+	<meta charset="UTF-8">
 	<title>Library Management System</title> 
-<link href=”bootstrap/css/bootstrap.min.css” rel=”stylesheet” type=”text/css” />
-<script type=”text/javascript” src=”bootstrap/js/bootstrap.min.js”></script> 
-
-<style>
-	.form-container {
-  margin: 3% auto;
-  display: block;
-  width:500px;
-  text-align:center;
-}
-
-body{
-  margin: 0 auto;
-  font-family: Arial;
-  background-color: #f8f8f8;
-  color: black;
-}
-
-.form-container input{
-  margin-bottom:12px;
-}
-
-.form-container .inputButton {
-	background-color: pink;
-	margin-right: 0 auto;
-	margin-left:4.9rem;
-	position: relative;
-	align-items:center;
-	display:flex;
-}
-</style>
+	<link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<div class="form-container">
