--- a/EmployeeWebApplication/WebContent/employeeRegister.html
+++ b/EmployeeWebApplication/WebContent/employeeRegister.html
@@ -1,36 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Employee Register form</title>
-<style>
-.form-container {
-	margin: 3% auto;
-	display: block;
-	width: 500px;
-	text-align: center;
-}
-
-body {
-	margin: 0 auto;
-	font-family: Arial;
-	background-color: #f8f8f8;
-	color: black;
-}
-
-.form-container input {
-	margin-bottom: 12px;
-}
-
-.form-container .inputButton {
-	background-color: pink;
-	margin-right: 0 auto;
-	margin-left: 4.9rem;
-	position: relative;
-	align-items: center;
-	display: flex;
-}
-</style>
+	<meta charset="UTF-8">
+	<title>Employee Register form</title>
+	<link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<div class="form-container">
