--- a/EmployeeWebApplication/WebContent/home.html
+++ b/EmployeeWebApplication/WebContent/home.html
@@ -3,98 +3,32 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <title>Home Page</title>
-
-<style>
-body {
-  background-color:#f8f8f8;
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #38444d;
-}
-
-li {
-  float: left;
-}
-
-li a, .dropbtn {
-  display: inline-block;
-  color: grey;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover, .dropdown:hover .dropbtn {
-  background-color: white;
-}
-
-li.dropdown {
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1;}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.home-section {
-  padding: 50px;
-  text-align: center;
-  color:#0B3A38;
-  
-}
-
-</style>
+<link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
-<ul>
-  <li><a href="home.html">Home</a></li>
-  <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Create</a>
-    <div class="dropdown-content">
-      <a href="createLibraryItem.html">Library Item</a>
-      <a href="createCategoryItem.html">Category Item</a>
-    </div>
-  </li>
-  <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">View</a>
-    <div class="dropdown-content">
-      <a href="ViewLibraryItemServlet">Library Item</a>
-      <a href="ViewCategoryServlet">Category Item</a>
-    </div>
-  </li>
-  <li style="float:right"><a href="login.html">Logout</a></li>
-</ul>
-<div class="home-section">
-  <h1>Welcome to Library Management WebSite</h1>
-  <p>  Here you can create and view Library and Category Items. Click on the menu:</p>
-  <p>Resize the browser window to see that this page is responsive by the way.</p>
-</div>
+	<ul>
+		<li><a href="home.html">Home</a></li>
+		<li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Create</a>
+			<div class="dropdown-content">
+				<a href="createLibraryItem.html">Library Item</a> <a
+					href="createCategoryItem.html">Category Item</a>
+			</div></li>
+		<li class="dropdown"><a href="javascript:void(0)" class="dropbtn">View</a>
+			<div class="dropdown-content">
+				<a href="ViewLibraryItemServlet">Library Item</a> <a
+					href="ViewCategoryServlet">Category Item</a>
+			</div></li>
+		<li style="float: right"><a href="login.html">Logout</a></li>
+	</ul>
+	<div class="home-section">
+		<h1>Welcome to Library Management WebSite</h1>
+		<p>Here you can create and view Library and Category Items. Click
+			on the menu:</p>
+		<p>Resize the browser window to see that this page is responsive
+			by the way.</p>
+	</div>
 
 </body>
 </html>
