code change for few elements

--- a/EmployeeWebApplication/WebContent/createCategoryItem.html
+++ b/EmployeeWebApplication/WebContent/createCategoryItem.html
@@ -8,7 +8,7 @@
 <body>
 
 	<ul>
-		<li><a href="login.html">Home</a></li>
+		<li><a href="home.html">Home</a></li>
 		<li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Create</a>
 			<div class="dropdown-content">
 				<a href="createLibraryItem.html">Library Item</a> <a
@@ -37,8 +37,11 @@
 		
 	
 	</div>
-	
+	<div class="excepDiv">
 		<p id="exceptionDisplay"></p>
+	</div>
+	
+		
 	</div>
 	
 	<script>
