--- a/EmployeeWebApplication/WebContent/createLibraryItem.html
+++ b/EmployeeWebApplication/WebContent/createLibraryItem.html
@@ -8,7 +8,7 @@
 <body>
 
 	<ul>
-		<li><a href="login.html">Home</a></li>
+		<li><a href="home.html">Home</a></li>
 		<li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Create</a>
 			<div class="dropdown-content">
 				<a href="createLibraryItem.html">Library Item</a> <a
@@ -89,7 +89,9 @@
 					class="inputButton" type="reset" value="Cancel" onclick="home.html" />
 			</form>
 		</div>
-		<p id="exceptionDisplay"></p>
+		<div class="excepDiv">
+			<p id="exceptionDisplay"></p>
+		</div>
 	</div>
 	<script>
 	   	 var url_string = window.location.href; //window.location.href
